--- a/app/src/main/res/layout/system_status_view.xml
+++ b/app/src/main/res/layout/system_status_view.xml
@@ -28,13 +28,21 @@
         android:layout_marginRight="5dp"
         android:orientation="horizontal"
         >
+        <ImageView
+            android:id="@+id/iv_system_net"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginRight="1dp"
+            android:tint="@color/zly_color_white"
+            android:src="@mipmap/icon_wifi0" />
         <com.zlyandroid.sysstatusbar.statusbar.widget.SignalView
-            android:id="@+id/s_system_net"
+            android:id="@+id/sv_system_net"
             android:layout_width="20dp"
-            android:layout_height="12dp"
-            android:visibility="gone"
+            android:layout_height="20dp"
+            android:layout_marginTop="4dp"
+            app:unit_width="7"
             app:level_color="@color/zly_color_white"
-            app:primary_color="@color/zly_color_Grey300"
+            app:primary_color="@color/zly_color_Grey500"
             app:shadow_color="@color/zly_color_transparent"
             />
         <TextView
