--- a/app/src/main/res/layout/system_status_view.xml
+++ b/app/src/main/res/layout/system_status_view.xml
@@ -71,9 +71,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textColor="@color/zly_color_Grey600"
+            android:textColor="@color/zly_color_white"
             android:text="100%"
-            android:textSize="6dp" />
+            android:textSize="7dp" />
 
     </RelativeLayout>
     <TextView
